--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oyster Data - Desarrollos y Optimización de Proyectos Big Data</title>
+    <title>Oyster Data - Big Data Project Development and Optimization</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -39,4 +39,62 @@
             justify-content: center;
             align-items: center;
             color: white;
-            text-shadow: 2px 2px
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+        .hero h1 {
+            font-size: 3em;
+        }
+        .content {
+            padding: 2em;
+            text-align: center;
+        }
+        .content h2 {
+            color: #0073e6;
+        }
+        .content p {
+            font-size: 1.2em;
+            line-height: 1.6em;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Oyster Data</h1>
+        <p>Big Data Project Development and Optimization</p>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About Us</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="hero">
+        <h1>Unlock the Power of Your Data</h1>
+    </div>
+    <div class="content" id="home">
+        <h2>Welcome to Oyster Data</h2>
+        <p>At Oyster Data, we specialize in developing and optimizing Big Data projects to help businesses harness the full potential of their data. Our team of experts is dedicated to providing innovative solutions that drive efficiency, insights, and growth.</p>
+    </div>
+    <div class="content" id="services">
+        <h2>Our Services</h2>
+        <p>We offer a range of services including data analytics, cloud data management, data visualization, and more. Our tailored solutions are designed to meet the unique needs of each client.</p>
+    </div>
+    <div class="content" id="about">
+        <h2>About Us</h2>
+        <p>Oyster Data is a leading firm in the field of Big Data, with years of experience in helping businesses transform their data into actionable insights. Our mission is to empower organizations through data-driven strategies.</p>
+    </div>
+    <div class="content" id="contact">
+        <h2>Contact Us</h2>
+        <p>Ready to take your data to the next level? Get in touch with us today to learn more about our services and how we can help your business grow.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Oyster Data. All rights reserved.</p>
+    </footer>
+</body>
+</html>
